[FIX] fixed profile pic alignment issue , fixed muvoyage  karma showing ui issue , fixed edit profile pop up override by sidenavbar and fixed edit profile mobile number restricted to numbers

--- a/src/modules/Dashboard/modules/Profile/components/BasicDetails/BasicDetails.module.css
+++ b/src/modules/Dashboard/modules/Profile/components/BasicDetails/BasicDetails.module.css
@@ -18,7 +18,7 @@
             width: 30px;
             position: absolute;
             right: 10px;
-            top: 5px;
+            /* top: 5px; */
             border-radius: 50%;
             display: flex;
             align-items: center;
